@@ -271,6 +271,16 @@ grid_color_g = $grid_color_g
 grid_color_b = $grid_color_b
 
 -- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+-- Background color, in RGB format; default value is (255;255;255),
+-- all color components should be in range 0-255,
+-- (0;0;0) means black; (255;255;255) - white.
+-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+free_color_r = $free_color_r
+free_color_g = $free_color_g
+free_color_b = $free_color_b
+
+-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 -- this number helps to upgrade configuration file correctly, don't change it
 -- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
@@ -338,7 +348,7 @@ end
 -- THE MAIN CODE STARTS HERE
 -- current version of configuration file
 -- version numbers 0-99 are reserved for 5.0.x series of the program
-current_version = 107
+current_version = 108
 old_version = 0
 upgrade_needed = 1
 
@@ -371,6 +381,9 @@ grid_line_width = 1
 grid_color_r = 0
 grid_color_g = 0
 grid_color_b = 0
+free_color_r = 255
+free_color_g = 255
+free_color_b = 255
 
 -- get user preferences
 path = instdir .. "\\options\\guiopts.lua"
